# Gennemsoegning-af-Statstidende

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: Linting.yml  Version.yml
.venv-dev/: pyvenv.cfg
.venv-dev/Scripts/: activate  activate.bat
robot_framework/: __main__.py  config.py  process.py  reset.py
robot_framework/sub_process/: common.py  kmd_boliglaan.py  opus.py
robot_framework/sub_process/statstidende/: doedsboer.py  gaeldssaneringer.py  konkursboer.py  statstidende.py  tvangsauktioner.py
