[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 9.5.0",
    "requests == 2.31.0",
    "pywinauto == 0.6.8",
    "openpyxl == 3.1.2",
    "itk_dev_shared_components == 1.*",
    "cryptography == 41.0.3",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]